--- a/frontend/studente/src/pages/activities/activity.html
+++ b/frontend/studente/src/pages/activities/activity.html
@@ -1,6 +1,6 @@
  <div class="experience-expandable-list" (click)="toggle()">
         <div class="experience-title">{{activity.experience.attributes.title}}</div>
-        <div class="experience-certificate"><span *ngIf="activity.certificate && activity.certificate.documentPresent">{{'certificate_label'|translate}}</span><span *ngIf="!(activity.certificate && activity.certificate.documentPresent)">{{'not_certificate_label'|translate}}</span></div>
+        <div class="experience-certificate"><span *ngIf="activity.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!activity.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
         <button class="stage-expansion" clear  ion-button icon-only> <ion-icon class="experience-expansion-icon" item-right [name]="opened ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
       </div>
       <div padding *ngIf="opened">
