--- a/frontend/studente/src/pages/addActivity/addActivity.html
+++ b/frontend/studente/src/pages/addActivity/addActivity.html
@@ -7,66 +7,131 @@
 </ion-header>
 
 <ion-content padding>
- <div>add activity</div>
-  <ion-grid>
-
-     <ion-row>
-    <ion-col col-3><ion-label>{{'addActivity_title_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_title_placeholder'|translate}}" [(ngModel)]="activity.title"></ion-input>
-    </ion-item></ion-col>
-    </ion-row>
-     <ion-row>
-
-    <ion-col col-3><ion-label>{{'addActivity_date_from_placeholder'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateFrom" placeholder="{{'addActivity_date_from_placeholder'|translate}}" ></ion-datetime>
-    </ion-item></ion-col>
-    </ion-row>
-         <ion-row>
-    <ion-col col-3><ion-label>{{'addActivity_date_to_placeholder'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-datetime displayFormat="DD/MM/YYYY"  [(ngModel)]="dateTo" placeholder="{{'addActivity_date_to_placeholder'|translate}}" ></ion-datetime>
-    </ion-item></ion-col>
-    </ion-row>
-
+  <form [formGroup]="activityForm">
+    <ion-grid>
       <ion-row>
-
-    <ion-col col-3><ion-label>{{'addActivity_address_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_address_placeholder'|translate}}" [(ngModel)]="activity.location"></ion-input>
-    </ion-item></ion-col>
-    </ion-row>
-      <ion-row>
-
-    <ion-col col-3><ion-label>{{'addActivity_tutor_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_tutor_placeholder'|translate}}" [(ngModel)]="activity.contact"></ion-input>
-    </ion-item></ion-col>
-    </ion-row>
-      <ion-row>
-
-    <ion-col col-3><ion-label>{{'addActivity_description_label'|translate}}</ion-label></ion-col><ion-col> <ion-item><ion-input type="text" placeholder="{{'addActivity_description_placeholder'|translate}}" [(ngModel)]="activity.description"></ion-input>
-    </ion-item></ion-col>
-    </ion-row>
-     <ion-row *ngIf="certificate && certificate.documentPresent">
-
-    <ion-col col-3><ion-label>{{'addCertificate_present_certificate_label'|translate}}</ion-label></ion-col>
-          <ion-col col-6> <ion-item>    <a download="certificate.txt" class="button label-button" href="{{ certificate.documentUri}}"><ion-icon name="md-download"></ion-icon></a>
-
-    </ion-item></ion-col>
-       <ion-col col-3>
-          <button class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">{{'addCertificate_remove_actual_certificate_label'|translate}}</button>
-      </ion-col>
+        <ion-col col-3>
+          <ion-label>{{'addActivity_title_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-6>
+          <div class="form-input">
+            <ion-input class="border-input" type="text" formControlName="title" [class.invalid]="!activityForm.controls.title.valid && (activityForm.controls.title.dirty || submitAttempt)"
+             placeholder="{{'addActivity_title_placeholder'|translate}}" [(ngModel)]="activity.title"></ion-input>
+             <div class="error-label" [style.visibility]="(!activityForm.controls.title.valid && (activityForm.controls.title.dirty || submitAttempt))?'visible':'hidden'">
+              <p>{{'field_missing_label'|translate}}</p>
+            </div>
+          </div>
+        </ion-col>
       </ion-row>
-    <ion-row>
+      <ion-row>
 
-    <ion-col col-3>
-      <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
-    </ion-col>
-      <ion-col col-6>
-        <ion-item>
-          <input id = "uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
-        </ion-item>
-      </ion-col>
-       <ion-col col-3>
+        <ion-col col-3>
+          <ion-label>{{'addActivity_dateFrom_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-3>
+          <ion-item>
+            <ion-datetime displayFormat="DD/MM/YYYY" [ngModelOptions]="{standalone: true}" [(ngModel)]="dateFrom" placeholder="{{'addActivity_date_from_placeholder'|translate}}"></ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-3>
+          <ion-label>{{'addActivity_dateTo_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-3>
+          <ion-item>
+            <ion-datetime displayFormat="DD/MM/YYYY" [ngModelOptions]="{standalone: true}" [(ngModel)]="dateTo" placeholder="{{'addActivity_date_to_placeholder'|translate}}"></ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+
+
+      <ion-row>
+
+        <ion-col col-3>
+          <ion-label>{{'addActivity_address_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-6>
+          <div class="form-input">
+            <ion-input type="text"  class="border-input"  formControlName="location"   [class.invalid]="!activityForm.controls.location.valid && (activityForm.controls.location.dirty || submitAttempt)" placeholder="{{'addActivity_address_placeholder'|translate}}"
+              (input)="getItems($event)" [(ngModel)]="activity.location">
+            </ion-input>
+            <div class="error-label" [style.visibility]="(!activityForm.controls.location.valid && (activityForm.controls.location.dirty || submitAttempt))?'visible':'hidden'">
+              <p>{{'field_missing_label'|translate}}</p>
+            </div>
+          </div>
+          <ion-list class="autocompletion-list" *ngIf="showList">
+            <button ion-item *ngFor="let item of items" (click)="selectPlace(item)">
+              {{ item.name }}
+            </button>
+          </ion-list>
+        </ion-col>
+        <ion-col col-3> <button class="action-button" ion-button icon-only (click)="chooseAddress()"><ion-icon name="md-map"></ion-icon></button></ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col col-3>
+          <ion-label>{{'addActivity_tutor_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-6>
+          <ion-item>
+            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addActivity_tutor_placeholder'|translate}}" [(ngModel)]="activity.contact"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+
+        <ion-col col-3>
+          <ion-label>{{'addActivity_description_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-6>
+          <div class="form-input">
+            <ion-textarea class="border-input" type="text" [class.invalid]="!activityForm.controls.description.valid && (activityForm.controls.description.dirty || submitAttempt)"
+              placeholder="{{'addActivity_description_placeholder'|translate}}" formControlName="description" placeholder="{{'addActivity_description_placeholder'|translate}}"
+              [(ngModel)]="activity.description"></ion-textarea>
+            <div class="error-label" [style.visibility]="(!activityForm.controls.description.valid && (activityForm.controls.description.dirty || submitAttempt))?'visible':'hidden'">
+              <p>{{'field_missing_label'|translate}}</p>
+            </div>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="certificate && certificate.documentPresent">
+
+        <ion-col col-3>
+          <ion-label>{{'addCertificate_present_certificate_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-6>
+          <ion-item>
+            <a download="certificate.txt" class="button label-button" href="{{ certificate.documentUri}}">
+              <ion-icon name="md-download"></ion-icon>
+            </a>
+
+          </ion-item>
+        </ion-col>
+        <ion-col col-3>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">{{'addCertificate_remove_actual_certificate_label'|translate}}</button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+
+        <ion-col col-3>
+          <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-6>
+          <ion-item>
+            <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
+          </ion-item>
+        </ion-col>
+        <ion-col col-3>
           <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'addCertificate_remove_certificate_label'|translate}}</button>
-      </ion-col>
+        </ion-col>
 
-    </ion-row>
-    <ion-row>
- <ion-col><button  class="action-button " ion-button block (click)="addActivity()">{{'save_button_label'|translate}}</button></ion-col><ion-col><button  class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
-    </ion-row>
-  </ion-grid>
-
+      </ion-row>
+      <ion-row>
+        <ion-col><button class="action-button " ion-button block (click)="addActivity()">{{'save_button_label'|translate}}</button></ion-col>
+        <ion-col><button class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
