--- a/frontend/studente/src/pages/stages/stages.html
+++ b/frontend/studente/src/pages/stages/stages.html
@@ -34,7 +34,7 @@
   </ion-grid>
   <ion-list *ngIf="(stages && stages.length>0)" >
     <ion-card  *ngFor="let stage of stages| experiencefilter:filter:'title'| orderBy:'stage.experience.attributes.title':order">
-<stage-panel [stage]="stage" (onDeleted)="onDeleted($event)"></stage-panel>
+<stage-panel [stage]="stage" [index]="stages.indexOf(stage)" (onDeleted)="onDeleted($event)"></stage-panel>
     </ion-card>
   </ion-list>
       <ion-card class="eperience-empty-list-label" *ngIf="(stage && stages.length==0)">
