--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -30,19 +30,24 @@
           <ion-label>{{'addCertificate_dateFrom_label'|translate}}</ion-label>
         </ion-col>
         <ion-col col-3>
-          <ion-item>
-            <ion-datetime displayFormat="DD/MM/YYYY" [ngModelOptions]="{standalone: true}" [(ngModel)]="dateFrom" placeholder="{{'addCertificate_date_from_placeholder'|translate}}"></ion-datetime>
-          </ion-item>
-        </ion-col>
+          <div class="form-input">
+            <ion-datetime  class="border-input" displayFormat="DD/MM/YYYY" formControlName="dateFrom" [(ngModel)]="dateFrom" placeholder="{{'addCertificate_date_from_placeholder'|translate}}"></ion-datetime>
+            <div class="error-label">
+              <div *ngIf="certificationForm.hasError('dateError')">{{'addCertificate_error_date'|translate}}</div>
+            </div>
+          </div>        </ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-3>
           <ion-label>{{'addCertificate_dateTo_label'|translate}}</ion-label>
         </ion-col>
         <ion-col col-3>
-          <ion-item>
-            <ion-datetime displayFormat="DD/MM/YYYY" [ngModelOptions]="{standalone: true}" [(ngModel)]="dateTo" placeholder="{{'addCertificate_date_to_placeholder'|translate}}"></ion-datetime>
-          </ion-item>
+          <div class="form-input">
+            <ion-datetime class="border-input" displayFormat="DD/MM/YYYY" formControlName="dateTo" [(ngModel)]="dateTo" placeholder="{{'addCertificate_date_to_placeholder'|translate}}"></ion-datetime>
+            <div class="error-label">
+              <div *ngIf="certificationForm.hasError('dateError')">{{'addCertificate_error_date'|translate}}</div>
+            </div>
+          </div>
         </ion-col>
       </ion-row>
       <ion-row>
@@ -52,10 +57,10 @@
         </ion-col>
         <ion-col col-6>
           <div class="form-input">
-            <ion-input type="text"  class="border-input"  formControlName="location"   [class.invalid]="!certificationForm.controls.location.valid && (certificationForm.controls.location.dirty || submitAttempt)" placeholder="{{'addCertificate_address_placeholder'|translate}}"
-              (input)="getItems($event)" [(ngModel)]="certification.location">
+            <ion-input type="text" class="border-input" formControlName="location" [class.invalid]="!certificationForm.controls.location.valid && (certificationForm.controls.location.dirty || submitAttempt)"
+              placeholder="{{'addCertificate_address_placeholder'|translate}}" (input)="getItems($event)" [(ngModel)]="certification.location">
             </ion-input>
-            <div class="error-label" [style.visibility]="(!certificationForm.controls.location.valid && (certificationForm.controls.location.dirty || submitAttempt))?'visible':'hidden'">
+            <div class="error-label" [style.visibility]="((!certificationForm.controls.location.valid && ((certificationForm.controls.location.dirty || submitAttempt  )))||(!certification.geocode && submitAttempt))?'visible':'hidden'">
               <p>{{'field_missing_label'|translate}}</p>
             </div>
           </div>
