working on new demo

--- a/frontend/studente/src/pages/exam/exam.html
+++ b/frontend/studente/src/pages/exam/exam.html
@@ -1,12 +1,12 @@
 <div class="exam-expandable-list" (click)="toggle()">
-        <div class="exam-title">{{exam.experience.attributes.titoloStudio}}</div>
-        <div class="exam-certificate"><span *ngIf="exam.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!exam.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
-        <button class="stage-expansion" clear  ion-button icon-only> <ion-icon class="experience-expansion-icon" item-right  [name]="opened ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
-      </div>
-      <div padding *ngIf="opened">
-        <div class="exam-title"> <span class="registration-institute-label">{{'exam_title_label'|translate}}</span>{{exam.experience.attributes.titoloStudio}}</div>
-        <div class="exam-title"> <span class="registration-institute-label">{{'exam_address_label'|translate}}</span>{{exam.experience.attributes.indirizzoEsame}}</div>
-        <div class="exam-title"> <span class="registration-institute-label">{{'exam_result_label'|translate}}</span>{{exam.experience.attributes.esito}}</div>
-        <div class="exam-title"> <span class="registration-institute-label">{{'exam_year_label'|translate}}</span>{{exam.experience.attributes.schoolYear}}</div>
-        <button  *ngIf="exam.certificate">download</button>
-      </div>
+  <div class="exam-title">{{exam.experience.attributes.qualification}}</div>
+  <div class="exam-certificate"><span *ngIf="exam.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!exam.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
+  <button class="stage-expansion" clear ion-button icon-only> <ion-icon class="experience-expansion-icon" item-right  [name]="opened ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+</div>
+<div padding *ngIf="opened">
+  <div class="exam-title"> <span class="registration-institute-label">{{'exam_type_label'|translate}}</span>{{exam.experience.attributes.type}}</div>
+  <div class="exam-title"> <span class="registration-institute-label">{{'exam_result_label'|translate}}</span>{{exam.experience.attributes.result}}</div>
+  <div class="exam-title" *ngIf="exam.experience.attributes.grade"> <span class="registration-institute-label">{{'exam_grade_label'|translate}}</span>{{exam.experience.attributes.grade}}</div>
+  <div class="exam-title"> <span class="registration-institute-label">{{'exam_year_label'|translate}}</span>{{exam.experience.attributes.schoolYear}}</div>
+  <button *ngIf="exam.certificate!=null && exam.certificate.documentPresent">download</button>
+</div>
