added mobilities, updated fileds to show in experiences, now it is possible to add certificates to istitutional experiences

--- a/frontend/studente/src/pages/activities/activities.html
+++ b/frontend/studente/src/pages/activities/activities.html
@@ -33,8 +33,8 @@
     </ion-row>
     </ion-grid>
   <ion-list *ngIf="(activities && activities.length>0)">
-    <ion-card  *ngFor="let activity of activities| experiencefilter:filter:'title'| orderBy:'activity.experience.attributes.title':order">
-<activity-panel [activity]="activity" [index]="activities.indexOf(activity)" (onDeleted)="onDeleted($event)"></activity-panel>
+    <ion-card  *ngFor="let activity of activities| experiencefilter:filter:'title'|  orderBy:'experience.attributes.dateFrom':false; let i = index">
+<activity-panel [activity]="activity" [index]="i" (onDeleted)="onDeleted($event)"></activity-panel>
 
 
     </ion-card>
