--- a/frontend/studente/src/pages/home/home.html
+++ b/frontend/studente/src/pages/home/home.html
@@ -37,6 +37,11 @@
           {{ 'home_activity_label' | translate |uppercase}}
         </div>
       </ion-card>
+                  <ion-card class="home-experience" (click)="openMobilities()">
+        <div>
+          {{ 'home_mobility_label' | translate |uppercase}}
+        </div>
+      </ion-card>
             <ion-card class="home-experience" (click)="openCertifications()">
         <div>
           {{ 'home_certifications_label' | translate|uppercase }}
