--- a/frontend/studente/src/pages/activities/activity.html
+++ b/frontend/studente/src/pages/activities/activity.html
@@ -1,18 +1,72 @@
- <div class="experience-expandable-list" (click)="toggle()">
-        <div class="experience-title">{{activity.experience.attributes.title}}</div>
-        <div class="experience-certificate"><span *ngIf="activity.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!activity.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
-        <button class="stage-expansion" clear  ion-button icon-only> <ion-icon class="experience-expansion-icon" item-right [name]="opened ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
-      </div>
-      <div padding *ngIf="opened">
-        <!--<div padding>-->
-          <div class="experience-title"> <span class="registration-institute-label">{{'activity_title_label'|translate}}</span> {{activity.experience.attributes.title}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'activity_dateFrom_label'|translate}}</span>{{activity.experience.attributes.dateFrom |date}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'activity_dateTo_label'|translate}}</span>{{activity.experience.attributes.dateTo |date}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'activity_location_label'|translate}}</span>{{activity.experience.attributes.location}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'activity_description_label'|translate}}</span>{{activity.experience.attributes.description}}</div>
-        <div class="experience-title" *ngIf="activity.certificate!=null && activity.certificate.documentPresent"> <span class="registration-institute-label">{{'certificate_certificate_label'|translate}}</span><a download="certificate.txt" class="button label-button" href="{{ activity.certificate.documentUri}}"><ion-icon name="md-download"></ion-icon></a></div>
-        <div class="experience-action-buttons" *ngIf="!activity.experience.attributes.institutional">
-          <button class="label-button" ion-button clear (click)="deleteActivity(activity)">{{'delete_button'|translate}}</button>
-          <button class="label-button" ion-button clear (click)="updateActivity(activity)">{{'update_button'|translate}}</button>
-        </div>
+<div class="experience-expandable-list" (click)="toggle()">
+  <div class="experience-title">{{activity.experience.attributes.title}}</div>
+  <div class="experience-certificate"><span *ngIf="activity.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!activity.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
+  <button class="stage-expansion" clear ion-button icon-only> <ion-icon class="experience-expansion-icon" item-right [name]="opened ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+</div>
+<div padding *ngIf="opened">
+  <!--<div padding>-->
+  <div class="experience-title"> <span class="registration-institute-label">{{'activity_title_label'|translate}}</span> {{activity.experience.attributes.title}}</div>
+  <div class="experience-title"> <span class="registration-institute-label">{{'activity_dateFrom_label'|translate}}</span>{{activity.experience.attributes.dateFrom
+    |date}}</div>
+  <div class="experience-title"> <span class="registration-institute-label">{{'activity_dateTo_label'|translate}}</span>{{activity.experience.attributes.dateTo
+    |date}}</div>
+  <div class="experience-title"> <span class="registration-institute-label">{{'activity_location_label'|translate}}</span>{{activity.experience.attributes.location}}</div>
+  <div class="experience-title"> <span class="registration-institute-label">{{'activity_description_label'|translate}}</span>{{activity.experience.attributes.description}}</div>
+  <!--<div class="experience-title" *ngIf="activity.certificate!=null && activity.certificate.documentPresent"> <span class="registration-institute-label">{{'certificate_certificate_label'|translate}}</span>
+    <a download="certificate.txt"
+      class="button label-button" href="{{ activity.certificate.documentUri}}">
+      <ion-icon name="md-download"></ion-icon>
+    </a>
+  </div>
+  <div class="experience-action-buttons" *ngIf="!activity.experience.attributes.institutional">
+    <button class="label-button" ion-button clear (click)="deleteActivity(activity)">{{'delete_button'|translate}}</button>
+    <button class="label-button" ion-button clear (click)="updateActivity(activity)">{{'update_button'|translate}}</button>
+  </div>
+</div>-->
+<ion-row class="experience-title" *ngIf="activity.certificate!=null && activity.certificate.documentPresent">
+    <ion-col col-3>
+      <ion-label>{{'certificate_certificate_label'|translate}}
+      </ion-label>
+    </ion-col>
+    <ion-col col-6>
+      <ion-item>
+        <a download="certificate.txt" class="button label-button" href="{{ activity.certificate.documentUri}}">
+          <ion-icon name="md-download"></ion-icon>
+        </a>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  <div class="experience-action-buttons" *ngIf="!activity.experience.attributes.institutional">
+    <button class="label-button" ion-button clear (click)="deleteActivity()">{{'delete_button'|translate}}</button>
+    <button class="label-button" ion-button clear (click)="updateActivity()">{{'update_button'|translate}}</button>
+  </div>
+  <div class="experience-action-buttons" *ngIf="activity.experience.attributes.institutional && !certificateInstitutional">
+    <button class="label-button" ion-button clear (click)="addCertificate()" *ngIf="!(activity.certificate!=null && activity.certificate.documentPresent)">
+        {{'add_certificate_button'|translate}}
+     </button>
+    <button class="label-button" ion-button clear (click)="addCertificate()" *ngIf="(activity.certificate!=null && activity.certificate.documentPresent)">
+        {{'modify_certificate_button'|translate}}
+    </button>
+    <button *ngIf="(activity.certificate!=null && activity.certificate.documentPresent)" class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">
+        {{'addCertificate_remove_actual_certificate_label'|translate}}
+        </button>
+  </div>
+  <ion-grid class="institutional-loading" *ngIf="certificateInstitutional">
+    <ion-row>
+      <ion-col col-3>
+        <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>
+        <ion-item>
+          <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <div class="experience-action-buttons" *ngIf="certificateInstitutional">
+    <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'cancel_button_label'|translate}}</button>
+    <button class="button-add-stage label-button" ion-button clear (click)="saveCertification()">{{'addCertificate_save_certificate_label'|translate}}</button>
+  </div>
 </div>
