--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -84,6 +84,17 @@
           </ion-item>
         </ion-col>
       </ion-row>
+            <ion-row>
+        <ion-col col-3>
+          <ion-label>{{'addCertificate_certifier_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-6>
+          <ion-item>
+            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addCertificate_certifier_placeholder'|translate}}"
+              [(ngModel)]="certification.certifier"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
       <ion-row>
 
         <ion-col col-3>
