--- a/frontend/studente/src/pages/certifications/certifications.html
+++ b/frontend/studente/src/pages/certifications/certifications.html
@@ -33,8 +33,8 @@
     </ion-row>
   </ion-grid>
   <ion-list *ngIf="(certifications && certifications.length>0)">
-    <ion-card  *ngFor="let certification of certifications| experiencefilter:filter:'title'| orderBy:'certification.experience.attributes.title':order">
-    <certification-panel [certification]="certification" [index]="certifications.indexOf(certification)" (onDeleted)="onDeleted($event)"></certification-panel>
+    <ion-card  *ngFor="let certification of certifications|  orderBy:'experience.attributes.dateFrom':false; let i = index">
+    <certification-panel [certification]="certification" [index]="i" (onDeleted)="onDeleted($event)"></certification-panel>
     </ion-card>
   </ion-list>
         <ion-card class="eperience-empty-list-label" *ngIf="(certifications && certifications.length==0)">
