--- a/frontend/studente/src/pages/stages/stage.html
+++ b/frontend/studente/src/pages/stages/stage.html
@@ -1,17 +1,70 @@
 <div class="experience-expandable-list" (click)="toggle()">
-        <div class="experience-title">{{stage.experience.attributes.title}}</div>
- <div class="experience-certificate"><span *ngIf="stage.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!stage.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div> 
-      <button class="stage-expansion" clear  ion-button icon-only > <ion-icon class="experience-expansion-icon" item-right [name]="opened ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
-      </div>
-      <div padding *ngIf="opened">
-         <div class="experience-title"> <span class="registration-institute-label">{{'stage_title_label'|translate}}</span> {{stage.experience.attributes.title}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'stage_dateFrom_label'|translate}}</span>{{stage.experience.attributes.dateFrom |date}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'stage_dateTo_label'|translate}}</span>{{stage.experience.attributes.dateTo |date}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'stage_location_label'|translate}}</span>{{stage.experience.attributes.location}}</div>
-         <div class="experience-title"> <span class="registration-institute-label">{{'stage_description_label'|translate}}</span>{{stage.experience.attributes.description}}</div>
-        <div class="experience-title" *ngIf="stage.certificate!=null && stage.certificate.documentPresent"> <span class="registration-institute-label">{{'certificate_certificate_label'|translate}}</span><a download="certificate.txt" class="button label-button" href="{{ stage.certificate.documentUri}}"><ion-icon name="md-download"></ion-icon></a></div>
-        <div class="experience-action-buttons" *ngIf="!stage.experience.attributes.institutional" >
-          <button class="label-button" ion-button clear (click)="deleteStage()">{{'delete_button'|translate}}</button>
-          <button class="label-button" ion-button clear (click)="updateStage()">{{'update_button'|translate}}</button>
-        </div>
-      </div>
+  <div class="experience-title">{{stage.experience.attributes.title}}</div>
+  <div class="experience-certificate"><span *ngIf="stage.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!stage.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
+  <button class="stage-expansion" clear ion-button icon-only> <ion-icon class="experience-expansion-icon" item-right [name]="opened ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
+</div>
+<div padding *ngIf="opened">
+  <div class="experience-title" *ngIf="stage.experience.attributes.dateFrom"> <span class="registration-institute-label">{{'stage_dateFrom_label'|translate}}</span>{{stage.experience.attributes.dateFrom
+    |date}}</div>
+  <div class="experience-title" *ngIf="stage.experience.attributes.dateTo"> <span class="registration-institute-label">{{'stage_dateTo_label'|translate}}</span>{{stage.experience.attributes.dateTo
+    |date}}</div>
+  <div class="experience-title" *ngIf="stage.experience.attributes.location"> <span class="registration-institute-label">{{'stage_location_label'|translate}}</span>{{stage.experience.attributes.location}}</div>
+  <div class="experience-title" *ngIf="stage.experience.attributes.description"> <span class="registration-institute-label">{{'stage_description_label'|translate}}</span>{{stage.experience.attributes.description}}</div>
+  <!--<div class="experience-title" *ngIf="stage.certificate!=null && stage.certificate.documentPresent"> <span class="registration-institute-label">{{'certificate_certificate_label'|translate}}</span>
+    <a download="certificate.txt"
+      class="button label-button" href="{{ stage.certificate.documentUri}}">
+      <ion-icon name="md-download"></ion-icon>
+    </a>
+  </div>
+  <div class="experience-action-buttons" *ngIf="!stage.experience.attributes.institutional">
+    <button class="label-button" ion-button clear (click)="deleteStage()">{{'delete_button'|translate}}</button>
+    <button class="label-button" ion-button clear (click)="updateStage()">{{'update_button'|translate}}</button>
+  </div>
+</div>-->
+<ion-row class="experience-title" *ngIf="stage.certificate!=null && stage.certificate.documentPresent">
+    <ion-col col-3>
+      <ion-label>{{'certificate_certificate_label'|translate}}
+      </ion-label>
+    </ion-col>
+    <ion-col col-6>
+      <ion-item>
+        <a download="certificate.txt" class="button label-button" href="{{ stage.certificate.documentUri}}">
+          <ion-icon name="md-download"></ion-icon>
+        </a>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  <div class="experience-action-buttons" *ngIf="!stage.experience.attributes.institutional">
+    <button class="label-button" ion-button clear (click)="deleteStage()">{{'delete_button'|translate}}</button>
+    <button class="label-button" ion-button clear (click)="updateStage()">{{'update_button'|translate}}</button>
+  </div>
+  <div class="experience-action-buttons" *ngIf="stage.experience.attributes.institutional && !certificateInstitutional">
+    <button class="label-button" ion-button clear (click)="addCertificate()" *ngIf="!(stage.certificate!=null && stage.certificate.documentPresent)">
+        {{'add_certificate_button'|translate}}
+     </button>
+    <button class="label-button" ion-button clear (click)="addCertificate()" *ngIf="(stage.certificate!=null && stage.certificate.documentPresent)">
+        {{'modify_certificate_button'|translate}}
+    </button>
+    <button *ngIf="(stage.certificate!=null && stage.certificate.documentPresent)" class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">
+        {{'addCertificate_remove_actual_certificate_label'|translate}}
+        </button>
+  </div>
+  <ion-grid class="institutional-loading" *ngIf="certificateInstitutional">
+    <ion-row>
+      <ion-col col-3>
+        <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>
+        <ion-item>
+          <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <div class="experience-action-buttons" *ngIf="certificateInstitutional">
+    <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'cancel_button_label'|translate}}</button>
+    <button class="button-add-stage label-button" ion-button clear (click)="saveCertification()">{{'addCertificate_save_certificate_label'|translate}}</button>
+  </div>
+</div>
