--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -31,11 +31,12 @@
         </ion-col>
         <ion-col col-3>
           <div class="form-input">
-            <ion-datetime  class="border-input" displayFormat="DD/MM/YYYY" formControlName="dateFrom" [(ngModel)]="dateFrom" placeholder="{{'addCertificate_date_from_placeholder'|translate}}"></ion-datetime>
+            <ion-datetime class="border-input" displayFormat="DD/MM/YYYY" formControlName="dateFrom" [(ngModel)]="dateFrom" placeholder="{{'addCertificate_date_from_placeholder'|translate}}"></ion-datetime>
             <div class="error-label">
               <div *ngIf="certificationForm.hasError('dateError')">{{'addCertificate_error_date'|translate}}</div>
             </div>
-          </div>        </ion-col>
+          </div>
+        </ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-3>
@@ -84,7 +85,7 @@
           </ion-item>
         </ion-col>
       </ion-row>
-            <ion-row>
+      <ion-row>
         <ion-col col-3>
           <ion-label>{{'addCertificate_certifier_label'|translate}}</ion-label>
         </ion-col>
@@ -96,7 +97,6 @@
         </ion-col>
       </ion-row>
       <ion-row>
-
         <ion-col col-3>
           <ion-label>{{'addCertificate_description_label'|translate}}</ion-label>
         </ion-col>
@@ -110,46 +110,65 @@
             </div>
           </div>
         </ion-col>
-        <!--<ion-col col-3>
-
-        </ion-col>-->
       </ion-row>
-      <ion-row *ngIf="certificate && certificate.documentPresent">
-
-        <ion-col col-3>
-          <ion-label>{{'addCertificate_present_certificate_label'|translate}}</ion-label>
-        </ion-col>
-        <ion-col col-6>
+        <ion-row>
+          <ion-col col-3>
+            <ion-label>{{'certification_type_label'|translate}}</ion-label>
+          </ion-col>
+          <ion-col col-3>
+            <ion-select [(ngModel)]="type" [ngModelOptions]="{standalone: true}">
+              <ion-option *ngFor="let o of typesData" [value]="o">{{o.text}}</ion-option>
+            </ion-select>
+          </ion-col>
+          <ion-col col-3 *ngIf="isLanguage()">
           <ion-item>
-            <a download="certificate.txt" class="button label-button" href="{{ certificate.documentUri}}">
-              <ion-icon name="md-download"></ion-icon>
-            </a>
-
+            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addCertificate_lang_placeholder'|translate}}"
+              [(ngModel)]="certification.lang"></ion-input>
           </ion-item>
-        </ion-col>
-        <ion-col col-3>
-          <button class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">{{'addCertificate_remove_actual_certificate_label'|translate}}</button>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col col-3>
-          <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
-        </ion-col>
-        <ion-col col-6>
+        </ion-col> 
+                  <ion-col col-3 *ngIf="isLanguage()">
           <ion-item>
-            <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
+            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addCertificate_level_placeholder'|translate}}"
+              [(ngModel)]="certification.level"></ion-input>
           </ion-item>
-        </ion-col>
-        <ion-col col-3>
-          <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'addCertificate_remove_certificate_label'|translate}}</button>
-        </ion-col>
+        </ion-col>           
+        </ion-row>
+        <ion-row *ngIf="certificate && certificate.documentPresent">
 
-      </ion-row>
+          <ion-col col-3>
+            <ion-label>{{'addCertificate_present_certificate_label'|translate}}</ion-label>
+          </ion-col>
+          <ion-col col-6>
+            <ion-item>
+              <a download="certificate.txt" class="button label-button" href="{{ certificate.documentUri}}">
+                <ion-icon name="md-download"></ion-icon>
+              </a>
 
-      <ion-row>
-        <ion-col><button class="action-button " ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col>
-        <ion-col><button class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
-      </ion-row>
+            </ion-item>
+          </ion-col>
+          <ion-col col-3>
+            <button class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">{{'addCertificate_remove_actual_certificate_label'|translate}}</button>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-3>
+            <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
+          </ion-col>
+          <ion-col col-6>
+            <ion-item>
+              <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
+            </ion-item>
+          </ion-col>
+          <ion-col col-3>
+            <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'addCertificate_remove_certificate_label'|translate}}</button>
+          </ion-col>
+
+        </ion-row>
+
+        <ion-row>
+          <ion-col><button class="action-button " ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col>
+          <ion-col><button class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
+        </ion-row>
     </ion-grid>
   </form>
 </ion-content>
