--- a/frontend/studente/src/pages/stages/stage.html
+++ b/frontend/studente/src/pages/stages/stage.html
@@ -1,4 +1,4 @@
-<div class="experience-expandable-list" (click)="toggle()">
+<div class="exam-expandable-list" (click)="toggle()">
   <div class="experience-title">{{stage.experience.attributes.title}}</div>
   <div class="experience-certificate"><span *ngIf="stage.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!stage.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
   <button class="stage-expansion" clear ion-button icon-only> <ion-icon class="experience-expansion-icon" item-right [name]="opened ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
@@ -10,6 +10,8 @@
     |date}}</div>
   <div class="experience-title" *ngIf="stage.experience.attributes.location"> <span class="registration-institute-label">{{'stage_location_label'|translate}}</span>{{stage.experience.attributes.location}}</div>
   <div class="experience-title" *ngIf="stage.experience.attributes.description"> <span class="registration-institute-label">{{'stage_description_label'|translate}}</span>{{stage.experience.attributes.description}}</div>
+    <div class="experience-title" *ngIf="stage.experience.attributes.contact"> <span class="registration-institute-label">{{'stage_contact_label' |translate}}</span>{{stage.experience.attributes.contact}}</div>
+      <div class="experience-title" *ngIf="stage.experience.attributes.duration"> <span class="registration-institute-label">{{'stage_duration_label'|translate}}</span>{{stage.experience.attributes.duration}}</div>
   <!--<div class="experience-title" *ngIf="stage.certificate!=null && stage.certificate.documentPresent"> <span class="registration-institute-label">{{'certificate_certificate_label'|translate}}</span>
     <a download="certificate.txt"
       class="button label-button" href="{{ stage.certificate.documentUri}}">
