--- a/frontend/studente/src/pages/addCertification/addCertification.html
+++ b/frontend/studente/src/pages/addCertification/addCertification.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      {{'title_add_certificate'|translate}}
+      {{'title_add_document'|translate}}
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -12,12 +12,12 @@
 
       <ion-row>
         <ion-col col-3>
-          <ion-label>{{'addCertificate_title_label'|translate}}</ion-label>
+          <ion-label>{{'addDocument_title_label'|translate}}</ion-label>
         </ion-col>
         <ion-col col-6>
           <div class="form-input">
             <ion-input class="border-input" type="text" formControlName="title" [class.invalid]="!certificationForm.controls.title.valid && (certificationForm.controls.title.dirty || submitAttempt)"
-              placeholder="{{'addCertificate_title_placeholder'|translate}}" [(ngModel)]="certification.title"></ion-input>
+              placeholder="{{'addDocument_title_placeholder'|translate}}" [(ngModel)]="certification.title"></ion-input>
             <div class="error-label" [style.visibility]="(!certificationForm.controls.title.valid && (certificationForm.controls.title.dirty || submitAttempt))?'visible':'hidden'">
               <p>{{'field_missing_label'|translate}}</p>
             </div>
@@ -27,26 +27,26 @@
       <ion-row>
 
         <ion-col col-3>
-          <ion-label>{{'addCertificate_dateFrom_label'|translate}}</ion-label>
+          <ion-label>{{'addDocument_dateFrom_label'|translate}}</ion-label>
         </ion-col>
         <ion-col col-3>
           <div class="form-input">
-            <ion-datetime class="border-input" displayFormat="DD/MM/YYYY" formControlName="dateFrom" [(ngModel)]="dateFrom" placeholder="{{'addCertificate_date_from_placeholder'|translate}}"></ion-datetime>
+            <ion-datetime class="border-input" displayFormat="DD/MM/YYYY" formControlName="dateFrom" [(ngModel)]="dateFrom" placeholder="{{'addDocument_date_from_placeholder'|translate}}"></ion-datetime>
             <div class="error-label">
-              <div *ngIf="certificationForm.hasError('dateError')">{{'addCertificate_error_date'|translate}}</div>
+              <div *ngIf="certificationForm.hasError('dateError')">{{'addDocument_error_date'|translate}}</div>
             </div>
           </div>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-3>
-          <ion-label>{{'addCertificate_dateTo_label'|translate}}</ion-label>
+          <ion-label>{{'addDocument_dateTo_label'|translate}}</ion-label>
         </ion-col>
         <ion-col col-3>
           <div class="form-input">
-            <ion-datetime class="border-input" displayFormat="DD/MM/YYYY" formControlName="dateTo" [(ngModel)]="dateTo" placeholder="{{'addCertificate_date_to_placeholder'|translate}}"></ion-datetime>
+            <ion-datetime class="border-input" displayFormat="DD/MM/YYYY" formControlName="dateTo" [(ngModel)]="dateTo" placeholder="{{'addDocument_date_to_placeholder'|translate}}"></ion-datetime>
             <div class="error-label">
-              <div *ngIf="certificationForm.hasError('dateError')">{{'addCertificate_error_date'|translate}}</div>
+              <div *ngIf="certificationForm.hasError('dateError')">{{'addDocument_error_date'|translate}}</div>
             </div>
           </div>
         </ion-col>
@@ -54,12 +54,12 @@
       <ion-row>
 
         <ion-col col-3>
-          <ion-label>{{'addCertificate_address_label'|translate}}</ion-label>
+          <ion-label>{{'addDocument_address_label'|translate}}</ion-label>
         </ion-col>
         <ion-col col-6>
           <div class="form-input">
             <ion-input type="text" class="border-input" formControlName="location" [class.invalid]="!certificationForm.controls.location.valid && (certificationForm.controls.location.dirty || submitAttempt)"
-              placeholder="{{'addCertificate_address_placeholder'|translate}}" (input)="getItems($event)" [(ngModel)]="certification.location">
+              placeholder="{{'addDocument_address_placeholder'|translate}}" (input)="getItems($event)" [(ngModel)]="certification.location">
             </ion-input>
             <div class="error-label" [style.visibility]="((!certificationForm.controls.location.valid && ((certificationForm.controls.location.dirty || submitAttempt  )))||(!certification.geocode && submitAttempt))?'visible':'hidden'">
               <p>{{'field_missing_label'|translate}}</p>
@@ -76,34 +76,34 @@
       <ion-row>
 
         <ion-col col-3>
-          <ion-label>{{'addCertificate_tutor_label'|translate}}</ion-label>
+          <ion-label>{{'addDocument_tutor_label'|translate}}</ion-label>
         </ion-col>
         <ion-col col-6>
           <ion-item>
-            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addCertificate_tutor_placeholder'|translate}}"
+            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addDocument_tutor_placeholder'|translate}}"
               [(ngModel)]="certification.contact"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-3>
-          <ion-label>{{'addCertificate_certifier_label'|translate}}</ion-label>
+          <ion-label>{{'addDocument_certifier_label'|translate}}</ion-label>
         </ion-col>
         <ion-col col-6>
           <ion-item>
-            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addCertificate_certifier_placeholder'|translate}}"
+            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addDocument_certifier_placeholder'|translate}}"
               [(ngModel)]="certification.certifier"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-3>
-          <ion-label>{{'addCertificate_description_label'|translate}}</ion-label>
+          <ion-label>{{'addDocument_description_label'|translate}}</ion-label>
         </ion-col>
         <ion-col col-6>
           <div class="form-input">
             <ion-textarea class="border-input" type="text" [class.invalid]="!certificationForm.controls.description.valid && (certificationForm.controls.description.dirty || submitAttempt)"
-              placeholder="{{'addCertificate_description_placeholder'|translate}}" formControlName="description" placeholder="{{'addCertificate_description_placeholder'|translate}}"
+              placeholder="{{'addDocument_description_placeholder'|translate}}" formControlName="description" placeholder="{{'addDocument_description_placeholder'|translate}}"
               [(ngModel)]="certification.description"></ion-textarea>
             <div class="error-label" [style.visibility]="(!certificationForm.controls.description.valid && (certificationForm.controls.description.dirty || submitAttempt))?'visible':'hidden'">
               <p>{{'field_missing_label'|translate}}</p>
@@ -111,64 +111,94 @@
           </div>
         </ion-col>
       </ion-row>
-        <ion-row>
-          <ion-col col-3>
-            <ion-label>{{'certification_type_label'|translate}}</ion-label>
-          </ion-col>
-          <ion-col col-3>
-            <ion-select [(ngModel)]="type" [ngModelOptions]="{standalone: true}">
-              <ion-option *ngFor="let o of typesData" [value]="o">{{o.text}}</ion-option>
-            </ion-select>
-          </ion-col>
-          <ion-col col-3 *ngIf="isLanguage()">
+      <ion-row>
+        <ion-col col-3>
+          <ion-label>{{'certification_type_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-3>
+          <ion-select [(ngModel)]="type" [ngModelOptions]="{standalone: true}">
+            <ion-option *ngFor="let o of typesData" [value]="o">{{o.text}}</ion-option>
+          </ion-select>
+        </ion-col>
+        <ion-col col-3 *ngIf="isLanguage()">
           <ion-item>
-            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addCertificate_lang_placeholder'|translate}}"
-              [(ngModel)]="certification.lang"></ion-input>
+            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addDocument_lang_placeholder'|translate}}" [(ngModel)]="certification.lang"></ion-input>
           </ion-item>
-        </ion-col> 
-                  <ion-col col-3 *ngIf="isLanguage()">
+        </ion-col>
+        <ion-col col-3 *ngIf="isLanguage()">
           <ion-item>
-            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addCertificate_level_placeholder'|translate}}"
+            <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addDocument_level_placeholder'|translate}}"
               [(ngModel)]="certification.level"></ion-input>
           </ion-item>
-        </ion-col>           
-        </ion-row>
-        <ion-row *ngIf="certificate && certificate.documentPresent">
+        </ion-col>
+      </ion-row>
+      <!--<ion-row *ngIf="document && document.documentPresent">
+        <ion-col col-3>
+          <ion-label>{{'addDocument_present_document_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-6>
+          <ion-item>
+            <a download="document.txt" class="button label-button" href="{{ document.documentUri}}">
+              <ion-icon name="md-download"></ion-icon>
+            </a>
 
-          <ion-col col-3>
-            <ion-label>{{'addCertificate_present_certificate_label'|translate}}</ion-label>
-          </ion-col>
-          <ion-col col-6>
-            <ion-item>
-              <a download="certificate.txt" class="button label-button" href="{{ certificate.documentUri}}">
-                <ion-icon name="md-download"></ion-icon>
-              </a>
+          </ion-item>
+        </ion-col>
+        <ion-col col-3>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeActualDocument()">{{'addDocument_remove_actual_document_label'|translate}}</button>
+        </ion-col>
+      </ion-row>-->
+      <ion-row *ngFor="let doc of documents">
+        <ion-col col-3>
+          <ion-label>{{'addDocument_present_document_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-3>
+          <ion-item>
+            <a download="document.txt" class="button label-button" href="{{ doc.documentUri}}">
+              <ion-icon name="md-download"></ion-icon>
+            </a>
 
-            </ion-item>
-          </ion-col>
-          <ion-col col-3>
-            <button class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">{{'addCertificate_remove_actual_certificate_label'|translate}}</button>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col col-3>
-            <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
-          </ion-col>
-          <ion-col col-6>
-            <ion-item>
-              <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
-            </ion-item>
-          </ion-col>
-          <ion-col col-3>
-            <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'addCertificate_remove_certificate_label'|translate}}</button>
-          </ion-col>
+          </ion-item>
+        </ion-col>
+           <ion-col col-3>
+          <ion-label>{{doc.attributes.name}}</ion-label>
+        </ion-col> 
+        <ion-col col-3>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeActualDocument()">{{'addDocument_remove_actual_document_label'|translate}}</button>
+        </ion-col>
+      </ion-row>
 
-        </ion-row>
 
-        <ion-row>
-          <ion-col><button class="action-button " ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col>
-          <ion-col><button class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
-        </ion-row>
+      <ion-row>
+        <ion-col col-3>
+          <ion-label>{{'addDocument_load_document_label'|translate}}</ion-label>
+        </ion-col>
+        <ion-col col-3>
+          <ion-item>
+            <input id="uploadInputFile" accept="application/pdf" type="file" ng2FileSelect [uploader]="uploader" />
+          </ion-item>
+        </ion-col>
+         <ion-col col-3 >
+          <ion-item>
+          <ion-input type="text" [ngModelOptions]="{standalone: true}" placeholder="{{'addDocument_name_doc_placeholder'|translate}}"
+              [(ngModel)]="document.attributes.name"></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col col-3>
+          <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'addDocument_remove_document_label'|translate}}</button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <button ion-button clear icon-only (click) = "addDocument()">
+      <ion-icon name='md-add-circle' is-active="false"></ion-icon>
+    </button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><button class="action-button " ion-button block (click)="addCertification()">{{'save_button_label'|translate}}</button></ion-col>
+        <ion-col><button class="action-button " ion-button block (click)="discard()">{{'cancel_button_label'|translate}}</button></ion-col>
+      </ion-row>
     </ion-grid>
   </form>
 </ion-content>
