--- a/frontend/studente/src/pages/addJob/addJob.html
+++ b/frontend/studente/src/pages/addJob/addJob.html
@@ -93,27 +93,27 @@
           </div>
         </ion-col>
       </ion-row>
-      <ion-row *ngIf="certificate && certificate.documentPresent">
+      <ion-row *ngIf="document && document.documentPresent">
 
         <ion-col col-3>
-          <ion-label>{{'addCertificate_present_certificate_label'|translate}}</ion-label>
+          <ion-label>{{'addDocument_present_document_label'|translate}}</ion-label>
         </ion-col>
         <ion-col col-6>
           <ion-item>
-            <a download="certificate.txt" class="button label-button" href="{{ certificate.documentUri}}">
+            <a download="document.txt" class="button label-button" href="{{ document.documentUri}}">
               <ion-icon name="md-download"></ion-icon>
             </a>
 
           </ion-item>
         </ion-col>
         <ion-col col-3>
-          <button class="button-add-job label-button" ion-button clear (click)="removeActualCertificate()">{{'addCertificate_remove_actual_certificate_label'|translate}}</button>
+          <button class="button-add-job label-button" ion-button clear (click)="removeActualDocument()">{{'addDocument_remove_actual_document_label'|translate}}</button>
         </ion-col>
       </ion-row>
       <ion-row>
 
         <ion-col col-3>
-          <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
+          <ion-label>{{'addDocument_load_document_label'|translate}}</ion-label>
         </ion-col>
         <ion-col col-6>
           <ion-item>
@@ -121,7 +121,7 @@
           </ion-item>
         </ion-col>
         <ion-col col-3>
-          <button class="button-add-job label-button" ion-button clear (click)="removeCertification()">{{'addCertificate_remove_certificate_label'|translate}}</button>
+          <button class="button-add-job label-button" ion-button clear (click)="removeCertification()">{{'addDocument_remove_document_label'|translate}}</button>
         </ion-col>
 
       </ion-row>
