--- a/frontend/studente/src/pages/jobs/job.html
+++ b/frontend/studente/src/pages/jobs/job.html
@@ -1,6 +1,6 @@
 <div class="experience-expandable-list" (click)="toggle()">
   <div class="experience-title">{{job.experience.attributes.title}}</div>
-  <div class="experience-certificate"><span *ngIf="job.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!job.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
+  <div class="experience-document"><span *ngIf="job.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!job.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
   <button class="job-expansion" clear ion-button icon-only> <ion-icon class="experience-expansion-icon" item-right [name]="opened ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
 </div>
 <div padding *ngIf="opened">
@@ -10,9 +10,9 @@
     |date}}</div>
   <div class="experience-title" *ngIf="job.experience.attributes.location"> <span class="registration-institute-label">{{'job_location_label'|translate}}</span>{{job.experience.attributes.location}}</div>
   <div class="experience-title" *ngIf="job.experience.attributes.description"> <span class="registration-institute-label">{{'job_description_label'|translate}}</span>{{job.experience.attributes.description}}</div>
-  <!--<div class="experience-title" *ngIf="job.certificate!=null && job.certificate.documentPresent"> <span class="registration-institute-label">{{'certificate_certificate_label'|translate}}</span>
-    <a download="certificate.txt"
-      class="button label-button" href="{{ job.certificate.documentUri}}">
+  <!--<div class="experience-title" *ngIf="job.document!=null && job.document.documentPresent"> <span class="registration-institute-label">{{'document_document_label'|translate}}</span>
+    <a download="document.txt"
+      class="button label-button" href="{{ job.document.documentUri}}">
       <ion-icon name="md-download"></ion-icon>
     </a>
   </div>
@@ -21,14 +21,14 @@
     <button class="label-button" ion-button clear (click)="updateJob()">{{'update_button'|translate}}</button>
   </div>
 </div>-->
-<ion-row class="experience-title" *ngIf="job.certificate!=null && job.certificate.documentPresent">
+<ion-row class="experience-title" *ngIf="job.document!=null && job.document.documentPresent">
     <ion-col col-3>
-      <ion-label>{{'certificate_certificate_label'|translate}}
+      <ion-label>{{'document_document_label'|translate}}
       </ion-label>
     </ion-col>
     <ion-col col-6>
       <ion-item>
-        <a download="certificate.txt" class="button label-button" href="{{ job.certificate.documentUri}}">
+        <a download="document.txt" class="button label-button" href="{{ job.document.documentUri}}">
           <ion-icon name="md-download"></ion-icon>
         </a>
       </ion-item>
@@ -38,21 +38,21 @@
     <button class="label-button" ion-button clear (click)="deleteJob()">{{'delete_button'|translate}}</button>
     <button class="label-button" ion-button clear (click)="updateJob()">{{'update_button'|translate}}</button>
   </div>
-  <div class="experience-action-buttons" *ngIf="job.experience.attributes.institutional && !certificateInstitutional">
-    <button class="label-button" ion-button clear (click)="addCertificate()" *ngIf="!(job.certificate!=null && job.certificate.documentPresent)">
-        {{'add_certificate_button'|translate}}
+  <div class="experience-action-buttons" *ngIf="job.experience.attributes.institutional && !documentInstitutional">
+    <button class="label-button" ion-button clear (click)="addDocument()" *ngIf="!(job.document!=null && job.document.documentPresent)">
+        {{'add_document_button'|translate}}
      </button>
-    <button class="label-button" ion-button clear (click)="addCertificate()" *ngIf="(job.certificate!=null && job.certificate.documentPresent)">
-        {{'modify_certificate_button'|translate}}
+    <button class="label-button" ion-button clear (click)="addDocument()" *ngIf="(job.document!=null && job.document.documentPresent)">
+        {{'modify_document_button'|translate}}
     </button>
-    <button *ngIf="(job.certificate!=null && job.certificate.documentPresent)" class="button-add-job label-button" ion-button clear (click)="removeActualCertificate()">
-        {{'addCertificate_remove_actual_certificate_label'|translate}}
+    <button *ngIf="(job.document!=null && job.document.documentPresent)" class="button-add-job label-button" ion-button clear (click)="removeActualDocument()">
+        {{'addDocument_remove_actual_document_label'|translate}}
         </button>
   </div>
-  <ion-grid class="institutional-loading" *ngIf="certificateInstitutional">
+  <ion-grid class="institutional-loading" *ngIf="documentInstitutional">
     <ion-row>
       <ion-col col-3>
-        <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
+        <ion-label>{{'addDocument_load_document_label'|translate}}</ion-label>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -63,8 +63,8 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <div class="experience-action-buttons" *ngIf="certificateInstitutional">
+  <div class="experience-action-buttons" *ngIf="documentInstitutional">
     <button class="button-add-job label-button" ion-button clear (click)="removeCertification()">{{'cancel_button_label'|translate}}</button>
-    <button class="button-add-job label-button" ion-button clear (click)="saveCertification()">{{'addCertificate_save_certificate_label'|translate}}</button>
+    <button class="button-add-job label-button" ion-button clear (click)="saveCertification()">{{'addDocument_save_document_label'|translate}}</button>
   </div>
 </div>
