--- a/frontend/studente/src/pages/mobilities/mobility.html
+++ b/frontend/studente/src/pages/mobilities/mobility.html
@@ -1,6 +1,6 @@
 <div class="experience-expandable-list" (click)="toggle()">
   <div class="experience-title">{{mobility.experience.attributes.title}}</div>
-  <div class="experience-certificate"><span *ngIf="mobility.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!mobility.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
+  <div class="experience-document"><span *ngIf="mobility.experience.attributes.institutional">{{'institutional_label'|translate}}</span><span *ngIf="!mobility.experience.attributes.institutional">{{'not_institutional_label'|translate}}</span></div>
   <button class="mobility-expansion" clear ion-button icon-only> <ion-icon class="experience-expansion-icon" item-right [name]="opened ? 'ios-arrow-up' : 'ios-arrow-down'"></ion-icon></button>
 </div>
 <div padding *ngIf="opened">
@@ -13,14 +13,14 @@
   <div class="experience-title" *ngIf="mobility.experience.attributes.location"> <span class="registration-institute-label">{{'mobility_location_label'|translate}}</span>{{mobility.experience.attributes.location}}</div>
   <div class="experience-title" *ngIf="mobility.experience.attributes.lang"> <span class="registration-institute-label">{{'mobility_language_label'|translate}}</span>{{mobility.experience.attributes.lang}}</div>
   <div class="experience-title" *ngIf="mobility.experience.attributes.description"> <span class="registration-institute-label">{{'mobility_description_label'|translate}}</span>{{mobility.experience.attributes.description}}</div>
-  <ion-row class="experience-title" *ngIf="mobility.certificate!=null && mobility.certificate.documentPresent">
+  <ion-row class="experience-title" *ngIf="mobility.document!=null && mobility.document.documentPresent">
     <ion-col col-3>
-      <ion-label>{{'certificate_certificate_label'|translate}}
+      <ion-label>{{'document_document_label'|translate}}
       </ion-label>
     </ion-col>
     <ion-col col-6>
       <ion-item>
-        <a download="certificate.txt" class="button label-button" href="{{ mobility.certificate.documentUri}}">
+        <a download="document.txt" class="button label-button" href="{{ mobility.document.documentUri}}">
           <ion-icon name="md-download"></ion-icon>
         </a>
       </ion-item>
@@ -30,21 +30,21 @@
     <button class="label-button" ion-button clear (click)="deleteMobility()">{{'delete_button'|translate}}</button>
     <button class="label-button" ion-button clear (click)="updateMobility()">{{'update_button'|translate}}</button>
   </div>
-  <div class="experience-action-buttons" *ngIf="mobility.experience.attributes.institutional && !certificateInstitutional">
-    <button class="label-button" ion-button clear (click)="addCertificate()" *ngIf="!(mobility.certificate!=null && mobility.certificate.documentPresent)">
-        {{'add_certificate_button'|translate}}
+  <div class="experience-action-buttons" *ngIf="mobility.experience.attributes.institutional && !documentInstitutional">
+    <button class="label-button" ion-button clear (click)="addDocument()" *ngIf="!(mobility.document!=null && mobility.document.documentPresent)">
+        {{'add_document_button'|translate}}
      </button>
-    <button class="label-button" ion-button clear (click)="addCertificate()" *ngIf="(mobility.certificate!=null && mobility.certificate.documentPresent)">
-        {{'modify_certificate_button'|translate}}
+    <button class="label-button" ion-button clear (click)="addDocument()" *ngIf="(mobility.document!=null && mobility.document.documentPresent)">
+        {{'modify_document_button'|translate}}
     </button>
-    <button *ngIf="(mobility.certificate!=null && mobility.certificate.documentPresent)" class="button-add-stage label-button" ion-button clear (click)="removeActualCertificate()">
-        {{'addCertificate_remove_actual_certificate_label'|translate}}
+    <button *ngIf="(mobility.document!=null && mobility.document.documentPresent)" class="button-add-stage label-button" ion-button clear (click)="removeActualDocument()">
+        {{'addDocument_remove_actual_document_label'|translate}}
         </button>
   </div>
-  <ion-grid class="institutional-loading" *ngIf="certificateInstitutional">
+  <ion-grid class="institutional-loading" *ngIf="documentInstitutional">
     <ion-row>
       <ion-col col-3>
-        <ion-label>{{'addCertificate_load_certificate_label'|translate}}</ion-label>
+        <ion-label>{{'addDocument_load_document_label'|translate}}</ion-label>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -55,8 +55,8 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <div class="experience-action-buttons" *ngIf="certificateInstitutional">
+  <div class="experience-action-buttons" *ngIf="documentInstitutional">
     <button class="button-add-stage label-button" ion-button clear (click)="removeCertification()">{{'cancel_button_label'|translate}}</button>
-    <button class="button-add-stage label-button" ion-button clear (click)="saveCertification()">{{'addCertificate_save_certificate_label'|translate}}</button>
+    <button class="button-add-stage label-button" ion-button clear (click)="saveCertification()">{{'addDocument_save_document_label'|translate}}</button>
   </div>
 </div>
